--- a/css/styles.css
+++ b/css/styles.css
@@ -1395,10 +1395,10 @@ span.error {
 }
 
 .table-wrapper {
-    max-width: 820px;
+    max-width: 650px;
     width: 100%;
     height: 400px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 .lk-table {
@@ -1420,6 +1420,7 @@ table th {
 }
 
 table td {
+    width: 15%;
     font-size: 18px;
     line-height: 22px;
     padding: 15px 0;
@@ -1477,18 +1478,32 @@ table td {
 }
 
 .win-img {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 42px;
-    height: 42px;
-    border-radius: 50px;
-    background: #FCED78;
+    width: 46px;
+    height: 46px;
     margin-right: 15px;
 }
 
+.win-img::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 42px;
+    height: 42px;
+    background: #46B8DD;
+    border-radius: 50px;
+}
+
 .win-img img {
-    width: 31px;
+    position: relative;
+    width: 46px;
 }
 
 .inner-page:not(.lk-page) {
@@ -1518,7 +1533,7 @@ table td {
 
 .filters {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     -ms-align-items: center;
     align-items: center;
     max-width: 820px;
@@ -1670,7 +1685,7 @@ table td {
 
 .win-info span {
     display: block;
-    max-width: 130px;
+    /*max-width: 130px;*/
     font-size: 18px;
 }
 
@@ -2574,6 +2589,12 @@ table td {
 
     .winners-table .win-img {
         margin-bottom: 6px;
+    }
+
+    table td {
+        vertical-align: baseline;
+        width: auto;
+        padding: 15px 15px 15px 0;
     }
 
     .faq-title {
