--- a/css/styles.css
+++ b/css/styles.css
@@ -1661,7 +1661,7 @@ table td {
     height: 17px;
     margin: auto;
     background: url(../img/search-icon.svg) center no-repeat;
-    background-size: cover;
+    background-size: contain;
     transition: all .2s linear;
 }
 
